Añadir README y portfolio como proyecto destacado

--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
                     <a href="https://github.com/CristianPastorSaez/bytraklandia" class="button" target="_blank">Ver código en GitHub</a>
                     <a href="https://www.bytraklandia.com/" class="button" target="_blank">Probar demo</a>
                 </div>
+                <!-- Proyecto personal - Portfolio -->
+                <div class="project-card">
+                    <img src="images/CPS.jpg" alt="Portfolio Web" class="project-img-small">
+                    <h3>Portfolio Personal</h3>
+                    <p>Mi portfolio web personal, desarrollado desde cero con HTML, CSS y JavaScript.</p>
+                    <p><strong>Tecnologías:</strong> HTML, CSS, JavaScript</p>
+                    <a href="https://github.com/CristianPastorSaez/portfolio" class="button" target="_blank">Ver código en GitHub</a>
+                    <!-- Si tienes una demo online, puedes añadir el enlace aquí -->
+                </div>
                 <!-- Puedes añadir más proyectos aquí -->
             </div>
         </div>
