Añadir README y portfolio como proyecto destacado

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <section id="contact" class="section contact">
         <div class="container contact-container">
             <h2>Contacto</h2>
-            <form action="#" method="post" class="contact-form">
+            <form action="https://formspree.io/f/xnnvjjod" method="POST" class="contact-form">
                 <input type="text" name="name" placeholder="Nombre" required>
                 <input type="email" name="email" placeholder="Email" required>
                 <textarea name="message" placeholder="Mensaje" required></textarea>
