--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
                     <a href="https://github.com/CristianPastorSaez/portfolio" class="button" target="_blank">Ver código en GitHub</a>
                     <!-- Si tienes una demo online, puedes añadir el enlace aquí -->
                 </div>
+                <!-- Proyecto Roshambo -->
+                <div class="project-card">
+                    <img src="images/thumbs/icon.ico" alt="Roshambo" class="project-img-small">
+                    <h3>Roshambo</h3>
+                    <p>Mi primer proyecto de front end: un sencillo juego de piedra, papel o tijera hecho con HTML, CSS y JavaScript. Marca el inicio de mi aprendizaje en desarrollo web.</p>
+                    <p><strong>Tecnologías:</strong> HTML, CSS, JavaScript</p>
+                    <a href="https://github.com/CristianPastorSaez/Roshambo" class="button" target="_blank">Ver código en GitHub</a>
+                    <a href="https://webgame-rvpvs.github.io/" class="button" target="_blank">Ver demo online</a>
+                </div>
                 <!-- Puedes añadir más proyectos aquí -->
             </div>
         </div>
