--- a/index.html
+++ b/index.html
@@ -94,6 +94,27 @@
         </div>
     </section>
 
+    <!-- Sección Experiencia -->
+    <section id="experience" class="section experience">
+        <div class="container">
+            <h2>Experiencia</h2>
+            <ul class="experience-list">
+                <li>
+                    <strong>Prácticas - Técnico informático</strong><br>
+                    <em>Vithas (a través de IES d'Alcàsser)</em><br>
+                    Enero 2025 - Actualidad<br>
+                    Mantenimiento de sistemas, atención básica al usuario y gestión de incidencias.
+                </li>
+                <li>
+                    <strong>Desarrollador web - Proyecto personal</strong><br>
+                    <em>Bytraklandia</em><br>
+                    2024 - 2025<br>
+                    Desarrollo completo de una comunidad con sistema de usuarios, panel de eventos y administración.
+                </li>
+            </ul>
+        </div>
+    </section>
+
     <!-- Sección Currículum -->
     <section id="resume" class="section resume">
         <div class="container">
