Añadida sección Experiencia profesional y estilos asociados

--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
                 <li>
                     <strong>Prácticas - Técnico informático</strong><br>
                     <em>Vithas (a través de IES d'Alcàsser)</em><br>
-                    Enero 2025 - Actualidad<br>
+                    Enero 2025 - Abril 2025<br>
                     Mantenimiento de sistemas, atención básica al usuario y gestión de incidencias.
                 </li>
                 <li>
                     <strong>Desarrollador web - Proyecto personal</strong><br>
                     <em>Bytraklandia</em><br>
-                    2024 - 2025<br>
+                    Febrero 2025 - Abril 2025<br>
                     Desarrollo completo de una comunidad con sistema de usuarios, panel de eventos y administración.
                 </li>
             </ul>
