Mejoras responsive: menú hamburguesa ocupa la mitad de pantalla en móvil, logo con fondo visible en móvil, navbar siempre fija

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <nav class="navbar">
         <div class="container">
             <a href="#home" class="logo">Cristian Pastor Sáez</a>
-            <ul class="nav-links">
+            <div class="hamburger" id="hamburger-menu" aria-label="Abrir menú">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <ul class="nav-links" id="nav-links">
                 <li><a href="#home">Inicio</a></li>
                 <li><a href="#about">Sobre mí</a></li>
                 <li><a href="#projects">Proyectos</a></li>
@@ -40,7 +45,7 @@
             <img src="images/CPS.jpg" alt="Cristian Pastor Sáez" class="profile-img">
             <div class="about-text">
                 <h2>Sobre mí</h2>
-                <p>Estudiante de SMR, pronto DAM. Apasionado por la programación, la IA y el aprendizaje continuo.<br> Constante, curioso y con ganas de aportar valor.</p>
+                <p>Actualmente curso un grado medio en Sistemas Microinformáticos y Redes (SMR), con vistas a continuar en DAM. Me interesa el desarrollo full stack multiplataforma, la inteligencia artificial y el aprendizaje autodidacta constante. Me gusta afrontar proyectos reales que me reten a mejorar.</p>
             </div>
         </div>
     </section>
