--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="container">
             <h2>Habilidades</h2>
             <ul class="skills-list">
-                <li><strong>Lenguajes:</strong> Python, JavaScript, HTML, CSS</li>
+                <li><strong>Lenguajes:</strong>JavaScript, HTML, CSS</li>
                 <li><strong>Herramientas:</strong> Git, GitHub, VS Code, Windows, Linux</li>
                 <li><strong>Aprendiendo:</strong> Node.js, React, DAM (Desarrollo de Aplicaciones Multiplataforma)</li>
             </ul>
@@ -170,3 +170,4 @@
     </script>
 </body>
 </html>
+
