--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                     <img src="images/thumbs/icon.ico" alt="Roshambo" class="project-img-small">
                     <h3>Roshambo</h3>
                     <p>Mi primer proyecto de front end: un sencillo juego de piedra, papel o tijera hecho con HTML, CSS y JavaScript. Marca el inicio de mi aprendizaje en desarrollo web.</p>
+					<p><strong>Creación:</strong> Junio 2024</p>
                     <p><strong>Tecnologías:</strong> HTML, CSS, JavaScript</p>
                     <a href="https://github.com/CristianPastorSaez/Roshambo" class="button" target="_blank">Ver código en GitHub</a>
                     <a href="https://webgame-rvpvs.github.io/" class="button" target="_blank">Ver demo online</a>
@@ -92,9 +93,9 @@
         <div class="container">
             <h2>Habilidades</h2>
             <ul class="skills-list">
-                <li><strong>Lenguajes:</strong>JavaScript, HTML, CSS</li>
-                <li><strong>Herramientas:</strong> Git, GitHub, VS Code, Windows, Linux</li>
-                <li><strong>Aprendiendo:</strong> Node.js, React, DAM (Desarrollo de Aplicaciones Multiplataforma)</li>
+                <li><strong>Lenguajes:</strong> JavaScript, HTML, CSS</li>
+                <li><strong>Herramientas:</strong> Git, GitHub, VS Code, Windows, Linux, VirtualBox</li>
+                <li><strong>Aprendiendo:</strong> Node.js, React, DAM (Desarrollo de Aplicaciones Multiplataforma), Configuración de Servidores</li>
             </ul>
         </div>
     </section>
@@ -112,7 +113,7 @@
                 </li>
                 <li>
                     <strong>Desarrollador web - Proyecto personal</strong><br>
-                    <em>Bytraklandia</em><br>
+                    <em>BYTRAKLANDIA</em><br>
                     Febrero 2025 - Abril 2025<br>
                     Desarrollo completo de una comunidad con sistema de usuarios, panel de eventos y administración.
                 </li>
@@ -170,4 +171,5 @@
     </script>
 </body>
 </html>
+
 
