--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
                 <!-- Proyecto real destacado -->
                 <div class="project-card">
                     <img src="images/thumbs/449560257-76c1ee5e-b375-4781-bde6-1feee63f55c2.png" alt="Bytraklandia Web" id="bytraklandia-img" class="project-img-small">
-                    <h3>Bytraklandia</h3>
+                    <h3>BYTRAKLANDIA</h3>
                     <p>Web de comunidad y gestión de eventos para jugadores, con panel de administración y sistema de usuarios.</p>
+					<p><strong>Creación:</strong> Enero 2025</p>
                     <p><strong>Tecnologías:</strong> HTML, CSS, JS, Node.js</p>
                     <a href="https://github.com/CristianPastorSaez/bytraklandia" class="button" target="_blank">Ver código en GitHub</a>
                     <a href="https://www.bytraklandia.com/" class="button" target="_blank">Probar demo</a>
@@ -69,9 +70,10 @@
                     <img src="images/CPS.jpg" alt="Portfolio Web" class="project-img-small">
                     <h3>Portfolio Personal</h3>
                     <p>Mi portfolio web personal, desarrollado desde cero con HTML, CSS y JavaScript.</p>
+					<p><strong>Creación:</strong> Junio 2025</p>
                     <p><strong>Tecnologías:</strong> HTML, CSS, JavaScript</p>
                     <a href="https://github.com/CristianPastorSaez/portfolio" class="button" target="_blank">Ver código en GitHub</a>
-                    <!-- Si tienes una demo online, puedes añadir el enlace aquí -->
+                    <!-- Esta misma página -->
                 </div>
                 <!-- Proyecto Roshambo -->
                 <div class="project-card">
@@ -83,7 +85,7 @@
                     <a href="https://github.com/CristianPastorSaez/Roshambo" class="button" target="_blank">Ver código en GitHub</a>
                     <a href="https://webgame-rvpvs.github.io/" class="button" target="_blank">Ver demo online</a>
                 </div>
-                <!-- Puedes añadir más proyectos aquí -->
+                <!-- Añadir más proyectos aquí -->
             </div>
         </div>
     </section>
@@ -171,5 +173,6 @@
     </script>
 </body>
 </html>
+
 
 
