--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Cristian Pastor Sáez | Portfolio</title>
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Ccircle cx='32' cy='32' r='32' fill='%232e7cf6'/%3E%3Ctext x='50%' y='54%' text-anchor='middle' font-size='36' fill='white' font-family='Poppins,Arial,sans-serif' dy='.3em'%3EC%3C/text%3E%3C/svg%3E" />
     <link rel="stylesheet" href="assets/css/main.css">
-	<script src="assets/js/script.js"></script>
+	<script src="/assets/js/script.js"></script>
 </head>
 <body>
     <!-- Barra de navegación -->
@@ -173,6 +173,7 @@
     </script>
 </body>
 </html>
+
 
 
 
